Clean up unused dependencies, move xz to compile only, let VZipUtil throw if xz is missing.